Use a better fix for spacing between title and article when hiding the TOC.
 - This restores the original setting (removed by _print.scss) instead of
   setting an arbitrary bottom margin on <h1>.

--- a/tdoc/common/static/tdoc/styles.css
+++ b/tdoc/common/static/tdoc/styles.css
@@ -142,10 +142,11 @@ html:is([data-tdoc-hide~=navigation], [data-tdoc-hide~=footer])
     display: none;
 }
 
-/* Keep the margin below the title even if the TOC is removed. */
+/* Keep some space between the title and the article when the TOC is removed. */
 @media print {
-    .bd-main .bd-content #jb-print-docs-body h1 {
-        margin-bottom: 2.75rem;
+    html:is([data-tdoc-hide~=navigation], [data-tdoc-hide~=primary-sidebar])
+            .bd-main .bd-content .bd-article {
+        padding-top: 1.5rem;
     }
 }
 
